--- a/GUI_Assembler/Frontend.html
+++ b/GUI_Assembler/Frontend.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assembler Frontend</title>
+    <title>SimpleRISC Assembler</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #0a0a0e;
             color: rgb(193, 205, 78);
             text-align: center;
+            padding: 20px;
         }
         .container {
             display: flex;
             justify-content: space-around;
             padding: 20px;
+            flex-wrap: wrap;
         }
         textarea {
             width: 45%;
@@ -23,14 +25,35 @@
             color: rgb(136, 218, 100);
             border: none;
             padding: 10px;
+            font-size: 14px;
+            resize: none;
         }
         button {
             margin-top: 20px;
-            padding: 10px 20px;
+            padding: 12px 24px;
             background-color: #6113d7;
             color: white;
             border: none;
             cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #4a0fb3;
+        }
+        .status {
+            margin-top: 15px;
+            font-size: 16px;
+        }
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                align-items: center;
+            }
+            textarea {
+                width: 90%;
+                margin-bottom: 10px;
+            }
         }
     </style>
 </head>
@@ -41,21 +64,44 @@
         <textarea id="machineCode" placeholder="Machine code output..." readonly></textarea>
     </div>
     <button onclick="assembleCode()">Assemble</button>
+    <p class="status" id="statusMessage"></p>
 
     <script>
         async function assembleCode() {
-            const code = document.getElementById("assemblyCode").value;
-            const response = await fetch("http://127.0.0.1:8080/assemble", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ code })
-            });
-            const result = await response.json();
-            document.getElementById("machineCode").value = result.machine_code ? result.machine_code.join("\n") : result.error;
+            const code = document.getElementById("assemblyCode").value.trim();
+            const statusMessage = document.getElementById("statusMessage");
+            const machineCodeOutput = document.getElementById("machineCode");
+
+            if (!code) {
+                statusMessage.textContent = "⚠️ Please enter assembly code.";
+                return;
+            }
+
+            statusMessage.textContent = "⏳ Assembling, please wait...";
+
+            try {
+                const response = await fetch("https://simple-risc-assembler-2.onrender.com/assemble", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({ code })
+                });
+
+                if (!response.ok) {
+                    throw new Error("Server error. Please try again.");
+                }
+
+                const result = await response.json();
+                machineCodeOutput.value = result.machine_code ? result.machine_code.join("\n") : result.error;
+                statusMessage.textContent = "✅ Assembly successful!";
+            } catch (error) {
+                statusMessage.textContent = "❌ Error: " + error.message;
+                machineCodeOutput.value = "";
+            }
         }
     </script>
 </body>
 </html>
+
 
